cabal-version:      3.0
name:               lyahfgg
version:            0.1.0.0
author:             Fischer Bordwell
maintainer:         fbordwel@purdue.edu
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    
      , base ^>=4.17.2.1
      , random
      , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable lyahfgg
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        lyahfgg
    hs-source-dirs:   app
    default-language: Haskell2010
